# cloud_practice

./: .gitignore  README.md
aws/: clean-aws.sh
aws/intro/: intro.py  (+1 more)
aws/intro/boto-practice/: pyproject.toml
aws/intro/boto-practice/src/compute/ec2/: create_ec2_instance.py  terminate_ec2_instance.py
aws/intro/boto-practice/src/compute/lambda_functions/: create_lambda.py  delete_lambda.py  invoke_lambda.py  list_lambdas.py
aws/intro/boto-practice/src/ec2/: attach_volume_to_ec2_instance.py  create_ec2_instance.py  detach_volume_from_ec2_instance.py  list_ec2_amis.py  list_ec2_instance_types.py  list_ec2_instances.py  reboot_ec2_instance.py  start_ec2_instance.py  stop_ec2_instance.py
aws/intro/boto-practice/src/key_pair/: list_key_pairs.py
aws/intro/boto-practice/src/network/eips/: allocate_elastic_ip.py  associate_elastic_ip.py  list_elastic_ips.py  release_elastic_ip.py  unassociate_elastic_ip.py
aws/intro/boto-practice/src/network/internet_gateways/: attach_internet_gateway.py  create_internet_gateway.py  delete_internet_gateway.py  detach_internet_gateway.py  list_internet_gateways.py
aws/intro/boto-practice/src/network/nats/: attach_nat_gateway.py  create_nat_gateway.py  delete_nat_gateway.py  detach_nat_gateway.py  list_nat_gateways.py
aws/intro/boto-practice/src/s3/: download_file_from_s3_bucket.py  list_s3_buckets.py  remove_file_from_s3_bucket.py  remove_s3_bucket.py  upload_file_to_s3_bucket.py
aws/intro/boto-practice/src/security_groups/: authorize_ingress_rule.py  create_security_group.py  delete_security_group.py  list_security_groups.py
(+117 files in other folders)
