[project]
name = "boto-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Nate Stott",email = "nate.stott@pm.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.39.6,<2.0.0)",
    "mypy-boto3-s3 (>=1.39.5,<2.0.0)"
]

[tool.poetry]
packages = [{include = "boto_practice", from = "src"}]


[tool.poetry.group.dev.dependencies]
boto3-stubs = "^1.39.6"
mypy = "^1.17.0"
pytest = "^8.4.1"
moto = "^5.1.8"
boto3 = "^1.39.6"
mypy-boto3-ec2 = "^1.39.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["boto3-stubs"]
strict = true
